force-app/main/default/objects/Account/fields/Active_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Product_Count__c</fullName>
    <description>Active product count activated from Data Cloud.</description>
    <inlineHelpText>Activated count of active products associated with the account.</inlineHelpText>
    <label>Active Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>