force-app/main/default/objects/Account/fields/AI_Citation_Count__c.field-meta.xml
<CustomField>
    <fullName>AI_Citation_Count__c</fullName>
    <description>Count of provenance references bound to the GPT-generated Pulse360 enrichment payload.</description>
    <inlineHelpText>Shows how many public evidence references support the current Pulse360 GPT narrative.</inlineHelpText>
    <label>AI Citation Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>