force-app/main/default/objects/Account/fields/AI_Model_Id__c.field-meta.xml
<CustomField>
    <fullName>AI_Model_Id__c</fullName>
    <description>OpenAI GPT model identifier that produced the current Pulse360 narrative and action payload.</description>
    <inlineHelpText>Tracks which GPT model was used for the current enrichment output.</inlineHelpText>
    <label>AI Model Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>