force-app/main/default/objects/Account/fields/AI_Narrative__c.field-meta.xml
<CustomField>
    <fullName>AI_Narrative__c</fullName>
    <description>GPT-generated Pulse360 narrative summarizing public evidence, CRM context, and recommended priorities.</description>
    <inlineHelpText>Model-generated summary of public evidence and account context. Use source refs to validate the reasoning.</inlineHelpText>
    <label>AI Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>