force-app/main/default/objects/Account/fields/AI_Narrative_Generated__c.field-meta.xml
<CustomField>
    <fullName>AI_Narrative_Generated__c</fullName>
    <description>Timestamp when the current GPT narrative was generated for this account.</description>
    <inlineHelpText>Use this timestamp to judge the freshness of the GPT-generated account narrative.</inlineHelpText>
    <label>AI Narrative Generated</label>
    <type>DateTime</type>
</CustomField>