force-app/main/default/objects/Account/fields/AI_Prompt_Version__c.field-meta.xml
<CustomField>
    <fullName>AI_Prompt_Version__c</fullName>
    <description>Prompt template version used to generate the current Pulse360 GPT output.</description>
    <inlineHelpText>Tracks the prompt revision used for the current GPT narrative and action output.</inlineHelpText>
    <label>AI Prompt Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>