force-app/main/default/objects/Account/fields/AI_Recommended_Actions__c.field-meta.xml
<CustomField>
    <fullName>AI_Recommended_Actions__c</fullName>
    <description>Serialized JSON of GPT-ranked next best actions for the account.</description>
    <inlineHelpText>JSON payload of ranked actions, confidence, revenue impact, and bound source references.</inlineHelpText>
    <label>AI Recommended Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>