force-app/main/default/objects/Account/fields/AI_Source_Refs__c.field-meta.xml
<CustomField>
    <fullName>AI_Source_Refs__c</fullName>
    <description>Serialized JSON provenance array for the GPT-generated Pulse360 enrichment payload.</description>
    <inlineHelpText>JSON array of public evidence references used by the current GPT narrative and actions.</inlineHelpText>
    <label>AI Source Refs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>