force-app/main/default/objects/Account/fields/Competitor_Risk_Signal__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Risk_Signal__c</fullName>
    <description>Competitor risk signal activated from Data Cloud.</description>
    <inlineHelpText>Activated competitive risk score for Pulse360 account intelligence.</inlineHelpText>
    <label>Competitor Risk Signal</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>