force-app/main/default/objects/Account/fields/Coverage_Gap_Flag__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Gap_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Coverage gap flag activated from Data Cloud.</description>
    <inlineHelpText>Activated flag indicating a coverage gap in the account hierarchy.</inlineHelpText>
    <label>Coverage Gap Flag</label>
    <type>Checkbox</type>
</CustomField>