force-app/main/default/objects/Account/fields/CRM_Covered_Subsidiary_Count__c.field-meta.xml
<CustomField>
    <fullName>CRM_Covered_Subsidiary_Count__c</fullName>
    <description>Count of known group entities already represented in CRM for this account group.</description>
    <inlineHelpText>Shows how many known subsidiaries or group entities are currently represented in CRM.</inlineHelpText>
    <label>CRM Covered Subsidiary Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>