force-app/main/default/objects/Account/fields/Cross_Sell_Propensity__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sell_Propensity__c</fullName>
    <description>Cross-sell propensity score activated from Data Cloud.</description>
    <inlineHelpText>Activated cross-sell propensity score for Pulse360 opportunity actions.</inlineHelpText>
    <label>Cross Sell Propensity</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>