force-app/main/default/objects/Account/fields/DataCloud_Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>DataCloud_Last_Synced__c</fullName>
    <description>Last Data Cloud activation sync timestamp for Pulse360.</description>
    <inlineHelpText>Activated timestamp showing when Data Cloud last synced this account payload.</inlineHelpText>
    <label>DataCloud Last Synced</label>
    <type>DateTime</type>
</CustomField>