force-app/main/default/objects/Account/fields/Duplicate_Exposure_Count__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Exposure_Count__c</fullName>
    <description>Count of currently open duplicate exposures tied to this account.</description>
    <inlineHelpText>Indicates how many duplicate pairs remain open for this account or its group context.</inlineHelpText>
    <label>Duplicate Exposure Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>