force-app/main/default/objects/Account/fields/Engagement_Intensity_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Intensity_Score__c</fullName>
    <description>Engagement intensity score activated from Data Cloud.</description>
    <inlineHelpText>Activated engagement intensity score for account intelligence surfaces.</inlineHelpText>
    <label>Engagement Intensity Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>