force-app/main/default/objects/Account/fields/Enrichment_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Run_Id__c</fullName>
    <description>Databricks enrichment run identifier for the current Pulse360 payload.</description>
    <inlineHelpText>Use this run id to trace the CRM payload back to a specific enrichment execution.</inlineHelpText>
    <label>Enrichment Run Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>