force-app/main/default/objects/Account/fields/External_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Legal_Name__c</fullName>
    <description>Publicly confirmed legal name of the account from external registry or filing evidence.</description>
    <inlineHelpText>External legal name confirmed through public evidence such as annual reports, filings, or registry sources.</inlineHelpText>
    <label>External Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>