force-app/main/default/objects/Account/fields/External_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Registration_Number__c</fullName>
    <description>Registry or filing identifier captured from public evidence when available.</description>
    <inlineHelpText>Registry identifier or filing reference used as part of external legal-entity validation.</inlineHelpText>
    <label>External Registration Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>