force-app/main/default/objects/Account/fields/External_Revenue_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>External_Revenue_Confirmed__c</fullName>
    <description>Revenue confirmed through public external evidence for the account group.</description>
    <inlineHelpText>Externally confirmed revenue baseline used for coverage and readiness comparisons.</inlineHelpText>
    <label>External Revenue Confirmed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>