force-app/main/default/objects/Account/fields/External_Subsidiaries_Found__c.field-meta.xml
<CustomField>
    <fullName>External_Subsidiaries_Found__c</fullName>
    <description>Count of subsidiaries discovered through external evidence but not fully modeled in CRM.</description>
    <inlineHelpText>Shows how many subsidiaries or group entities were discovered in public evidence outside the current CRM footprint.</inlineHelpText>
    <label>External Subsidiaries Found</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>