force-app/main/default/objects/Account/fields/Externally_Validated__c.field-meta.xml
<CustomField>
    <fullName>Externally_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether public evidence confirms the entity represented by the CRM account.</description>
    <inlineHelpText>True when public evidence confirms the account identity or legal entity context.</inlineHelpText>
    <label>Externally Validated</label>
    <type>Checkbox</type>
</CustomField>