force-app/main/default/objects/Account/fields/Group_Known_Subsidiary_Count__c.field-meta.xml
<CustomField>
    <fullName>Group_Known_Subsidiary_Count__c</fullName>
    <description>Count of known public group entities or subsidiaries in the Pulse360 model.</description>
    <inlineHelpText>Represents the number of known public group entities in scope for this account story.</inlineHelpText>
    <label>Group Known Subsidiary Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>