force-app/main/default/objects/Account/fields/Group_Revenue_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Group_Revenue_Rollup__c</fullName>
    <description>Group revenue rollup activated from Data Cloud and Databricks.</description>
    <inlineHelpText>Activated group-level revenue rollup for Account 360 hierarchy views.</inlineHelpText>
    <label>Group Revenue Rollup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>