force-app/main/default/objects/Account/fields/Group_Revenue_Visible__c.field-meta.xml
<CustomField>
    <fullName>Group_Revenue_Visible__c</fullName>
    <description>Revenue currently visible through CRM-covered entities for the account group.</description>
    <inlineHelpText>Use this field to compare seller-visible revenue against externally confirmed group revenue.</inlineHelpText>
    <label>Group Revenue Visible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>