force-app/main/default/objects/Account/fields/Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Score__c</fullName>
    <description>Pulse360 account health score activated from Data Cloud.</description>
    <inlineHelpText>Activated account health score used by Agentforce and Account 360.</inlineHelpText>
    <label>Health Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>