force-app/main/default/objects/Account/fields/Hierarchy_Payload__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Payload__c</fullName>
    <description>Serialized group hierarchy payload activated from Data Cloud for seller-facing group workspace rendering.</description>
    <inlineHelpText>Serialized JSON hierarchy payload used by Pulse360 seller experiences.</inlineHelpText>
    <label>Hierarchy Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>