force-app/main/default/objects/Account/fields/Identity_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Identity_Confidence__c</fullName>
    <description>Identity confidence score activated from Data Cloud for Pulse360.</description>
    <inlineHelpText>Identity resolution confidence score from Data Cloud.</inlineHelpText>
    <label>Identity Confidence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>