force-app/main/default/objects/Account/fields/Intent_Signal_Payload__c.field-meta.xml
<CustomField>
    <fullName>Intent_Signal_Payload__c</fullName>
    <description>Serialized JSON of the routed intent signal used by the Pulse360 signal routing workspace.</description>
    <inlineHelpText>JSON payload containing routed signal score, threshold reason, channel readiness, and drafted follow-up context.</inlineHelpText>
    <label>Intent Signal Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>