force-app/main/default/objects/Account/fields/Last_Engagement_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Engagement_Timestamp__c</fullName>
    <description>Most recent engagement timestamp activated from Data Cloud.</description>
    <inlineHelpText>Activated timestamp of the most recent customer engagement.</inlineHelpText>
    <label>Last Engagement Timestamp</label>
    <type>DateTime</type>
</CustomField>