force-app/main/default/objects/Account/fields/Open_Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunity_Count__c</fullName>
    <description>Open opportunity count activated from Data Cloud.</description>
    <inlineHelpText>Activated count of open opportunities related to the account.</inlineHelpText>
    <label>Open Opportunity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>