force-app/main/default/objects/Account/fields/Primary_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Brand_Name__c</fullName>
    <description>Primary brand signal activated from Data Cloud.</description>
    <inlineHelpText>Activated primary brand name for the account.</inlineHelpText>
    <label>Primary Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>