force-app/main/default/objects/Account/fields/Regulatory_Readiness_Score__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Readiness_Score__c</fullName>
    <description>Typed regulatory readiness score derived from identity, coverage, and external validation signals.</description>
    <inlineHelpText>Indicates how ready the account context is for a provenance-sensitive regulatory or audit discussion.</inlineHelpText>
    <label>Regulatory Readiness Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>