force-app/main/default/objects/Account/fields/Unified_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Unified_Profile_Id__c</fullName>
    <description>Data Cloud unified profile identifier activated from Pulse360.</description>
    <inlineHelpText>Activated Data Cloud unified profile identifier for Pulse360 Account 360 flows.</inlineHelpText>
    <label>Unified Profile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>