force-app/main/default/objects/Account/fields/Validity_Score_External__c.field-meta.xml
<CustomField>
    <fullName>Validity_Score_External__c</fullName>
    <description>External-evidence validity score for the account identity and public profile.</description>
    <inlineHelpText>Confidence score based on public evidence rather than internal field agreement alone.</inlineHelpText>
    <label>Validity Score External</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>